# rpy

./: .gitignore  .readthedocs.yaml  README.md  example_async.py  example_server.py  example_sync.py  pyproject.toml  requirements.txt  test.py  unasync.py
.github/workflows/: main.yml  test.yml
docs/: basics.rst  conf.py  index.rst
docs/source/: API.rst
dyst/: __init__.py  abc.py  client_async.py  client_sync.py  common.py  connection.py  exception.py  pubsub.py  server.py
examples/: client.py  greeting_client.py  greeting_server.py  server.py
fountainhead/: __init__.py  client.py  client_async.py  client_sync.py  common.py  connection.py  server.py  storage.py
rmy/: __init__.py  abc.py  client_async.py  client_sync.py  common.py  connection.py  pubsub.py  server.py
rpy/: __init__.py  client_async.py  client_sync.py  common.py  connection.py  server.py
tests/: test_architecture.py  test_async_specific.py  test_attribute_async.py  test_attribute_sync.py  test_cancellable_stream.py  test_generator_async.py  test_generator_sync.py  test_global.py  test_inprocess.py  test_method_async.py  test_method_sync.py  test_sync.py  utils.py  utils_async.py  utils_sync.py
tests/dyst/: test_architecture.py  test_cancellable_stream.py  test_command.py  test_server.py  test_stream.py  test_sync.py
tests/fountainhead/: test_global.py
tests_sync/dyst/: test_stream.py
