
[project]
name = "rpy"
version = "1.0.0"
license = {text = "GNU"}
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
include = ["*rpy*"]

[tool.black]
line-length = 99
target_version = ["py37"]

[tool.isort]
line_length = 99
profile = "black"
multi_line_output = 3
lines_after_imports = 2
default_section = "THIRDPARTY"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
install_types = true
non_interactive = true
incremental = true
warn_unused_configs = false
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["noos_gateway.data.*.migrations.*"]
ignore_errors = true


[tool.coverage.run]
source = "rpy/*"
[tool.poetry]
name = "rpy"
version = "0.1.0"
description = "stateful rpc for Python"
authors = ["fdv1 <francois@pytek.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
anyio = "^3.6.2"
janus = "^1.0.0"
asyncstdlib = "^3.10.7"
mpmc = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.3.0"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
