
[project]
name = "rmy"
version = "1.0.0"
license = {text = "GNU"}
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
include = ["*rmy*"]

[tool.black]
line-length = 99
target_version = ["py38"]

[tool.isort]
line_length = 99
profile = "black"
multi_line_output = 3
lines_after_imports = 2
default_section = "THIRDPARTY"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
install_types = true
non_interactive = true
incremental = true
warn_unused_configs = false
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true


[tool.coverage.run]
source = "rmy/*"
[tool.poetry]
name = "rmy"
version = "0.1.1"
description = "Stateful rpc for Python"
authors = ["fdv1 <francois@pytek.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
anyio = "^3.7.0"
asyncstdlib = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.3.0"
pydocstyle = "^6.3.0"
black = "^23.3.0"


[tool.poetry.group.docs.dependencies]
sphinx-autodoc-typehints = "^1.2.0"
furo = "^2023.5.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
